# nixos-dotfiles

./: .gitignore  README.md  configuration.nix  flake.nix  hardware-configuration.nix  home.nix
config/ags/: app.ts  package.json  tsconfig.json
config/ags/widget/: Bar.tsx
config/btop/: btop.conf
config/dunst/: dunstrc
config/fastfetch/: cat-fu.txt  config.jsonc  dizziness.txt  nuannichuan.txt  nuannichuan_color.txt  nuannichuan_colored.txt
config/foot/: colors.ini  foot.ini
config/mango/: autostart.sh  colors.css  config.conf  config.jsonc  menu.sh  mic-mute.sh  rebar.sh  search.sh  smart-snip.sh  snip.sh  stats.sh  style.css  toggle-record.sh  volume-mute.sh  wp-chooser.sh
config/matugen/: config.toml
config/matugen/templates/: btop.theme  foot.ini  matugen_colors.lua  tmux.conf  waybar.css
config/nvim/: README.md  init.lua
config/nvim/after/ftplugin/: man.lua
config/nvim/after/plugin/: colors.lua
config/nvim/colors/: dodona.vim
config/nvim/lua/config/: keybinds.lua  matugen_colors.lua  options.lua
config/nvim/lua/plugins/: completion.lua  editor.lua  markdown.lua  telescope.lua  tools.lua  ui.lua
config/nvim/plugin/: docgen.lua  lsp.lua  quickformat.lua  tonysitter.lua
config/tmux/: colors.conf  tmux.conf
config/waybar/: style.css
docs/: ARCHITECTURE.md  DEPENDENCIES.md  GIT_WORKFLOW.md  PALETTE.md  README.md  SCOPE.md  SOUND_DESIGN.md
dodona/: .gitignore  Cargo.toml  README.md  build.rs  devshell.nix
dodona/assets/fonts/: README.md
dodona/assets/geoip/: README.md
dodona/assets/sounds/: README.md
dodona/src/: main.rs
dodona/src/core/: event_loop.rs  mod.rs  surface.rs  wayland.rs
dodona/src/data/: audio.rs  cpu.rs  disk.rs  geoip.rs  gpu.rs  media.rs  mem.rs  mod.rs  net.rs  power.rs  temp.rs  time.rs  workspaces.rs
dodona/src/ipc/: mangoctl.rs  mod.rs
dodona/src/render/: mod.rs  primitives.rs  skia.rs  text.rs  theme.rs
dodona/src/sound/: cues.rs  mod.rs  player.rs
dodona/src/widgets/: bottom_status.rs  globe.rs  graphs.rs  launcher.rs  mission_control.rs  mod.rs  notifications.rs  siderails.rs  topbar.rs
home/badmaster67/: default.nix  packages.nix  shell.nix  wayland.nix
home/badmaster67/programs/: default.nix  fastfetch.nix  foot.nix  git.nix  yazi.nix  zathura.nix
hosts/oubliette-btw/: configuration.nix  hardware-configuration.nix
modules/: neovim.nix  starship.nix
modules/home/: neovim.nix  starship.nix  tmux.nix
modules/system/: boot.nix  default.nix  desktop-mango.nix  fonts.nix  networking.nix  services.nix  stylix.nix  users.nix
